@@ -112,8 +112,13 @@ server:
 	# the working directory.
 	# directory: "/etc/unbound"
 
-	# the log file, "" means log to stderr.
+	# the log file, "" means log to stderr. 
+	# Use of this option sets use-syslog to "no".
 	# logfile: ""
+	
+	# Log to syslog(3) if yes. The log facility LOG_DAEMON is used to 
+	# log to, with identity "unbound". If yes, it overrides the logfile.
+	# use-syslog: yes 
 
 	# the pid file.
 	# pidfile: "unbound.pid"
