@@ -205,7 +205,7 @@ infra_test()
 int 
 main(int argc, char* argv[])
 {
-	log_init(NULL);
+	log_init(NULL, 0);
 	if(argc != 1) {
 		printf("usage: %s\n", argv[0]);
 		printf("\tperforms unit tests.\n");
